--- a/src/index.scss
+++ b/src/index.scss
@@ -8,6 +8,7 @@
 
 body {
   margin: 0;
+  padding: 12px 40px;
   font-family: "Open Sans Condensed", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
